fix blog title on mobile

--- a/assets/sass/blog_article.scss
+++ b/assets/sass/blog_article.scss
@@ -142,7 +142,7 @@
                     font-weight: 600;
                     color: $charcoal-grey;
                     margin-bottom: 1.5rem;
-                    height: 3.5rem;
+                    // height: 3.5rem;
                     overflow: hidden;
                     @media (max-width: $tablet){
                         font-size: 20px;
