--- a/assets/sass/blog_roll.scss
+++ b/assets/sass/blog_roll.scss
@@ -156,7 +156,7 @@
                     font-family: 600;
                     color: $charcoal-grey;
                     margin-bottom: 1.5rem;
-                    height: 3.5rem;
+                    // height: 3.5rem;
                     overflow: hidden;
                 }
                 .blog-image-w{
